--- a/pg-contribuinte.html
+++ b/pg-contribuinte.html
@@ -10,11 +10,26 @@
     <title>Portal do Contribuinte</title>
 </head>
 <body>
-    <header class="container py-3 d-flex justify-content-between align-items-center">
+    <header class="container py-2 d-flex justify-content-between align-items-center">
         <img src="images/logo/Union.png" alt="ag-logo">
-        <button class="button">
-            <i class="bi bi-person-fill text-light"></i>
-        </button>
+        <div class="navbar navbar-expand-sm">
+            <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav--list">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div id="nav--list" class="navbar-collapse collapse">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Solicitar acesso</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Alterar Senha</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Sair</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </header>
     <main class="container">
         <div class="d-flex justify-content-between align-items-center py-3">
@@ -34,13 +49,13 @@
                 </button>
             </div>
         </div>
-        <form>
-            <input type="search" id="input-busca" placeholder="Pesquisar" class="w-100 px-4 py-2 rounded-5">
+        <div class="search-box">
+            <form>
+                <input type="search" id="input-busca" placeholder="Pesquisar" class="w-100 px-4 py-2">
+            </form>
             <i class="bi bi-search"></i>
-        </form>
-        <div class="py-3">
-            Nossas aplicações
         </div>
+        <p class="py-3 m-0">Nossas aplicações</p>
     </main>
     <footer class="container d-flex justify-content-between align-items-center">
         <div>
