--- a/pg-contribuinte.html
+++ b/pg-contribuinte.html
@@ -3,67 +3,107 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="shortcut icon" href="images/logo/Icon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/portal.css">
     <title>Portal do Contribuinte</title>
 </head>
 <body>
-    <header class="container py-2 d-flex justify-content-between align-items-center">
+    <header class="container">
         <img src="images/logo/Union.png" alt="ag-logo">
-        <div class="navbar navbar-expand-sm">
-            <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav--list">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div id="nav--list" class="navbar-collapse collapse">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Solicitar acesso</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Alterar Senha</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Sair</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
     </header>
     <main class="container">
-        <div class="d-flex justify-content-between align-items-center py-3">
+        <div class="row">
             <div class="user-info">
-                <p class="m-0">Olá, <span class="user-name">José</span>!</p>
-                <p class="user-msg m-0">Bom dia</p>
+                <p>Olá, <span class="user-name">José</span>!</p>
+                <p class="user-msg">Bom dia</p>
             </div>
             <div class="group-btn">
-                <button class="button">
+                <button class="btn">
                     <i class="bi bi-zoom-out"></i>
                 </button>
-                <button class="button">
+                <button class="btn">
                     <i class="bi bi-circle-half"></i>
                 </button>
-                <button class="button">
+                <button class="btn">
                     <i class="bi bi-zoom-in"></i>
                 </button>
             </div>
         </div>
-        <div class="search-box">
-            <form>
-                <input type="search" id="input-busca" placeholder="Pesquisar" class="w-100 px-4 py-2">
-            </form>
-            <i class="bi bi-search"></i>
+        <div>
+            <div class="search-box">
+                <form>
+                    <input type="search" id="input-busca" placeholder="Pesquisar">
+                </form>
+                <i class="bi bi-search"></i>
+            </div>
+            <p>Nossas aplicações</p>
         </div>
-        <p class="py-3 m-0">Nossas aplicações</p>
     </main>
-    <footer class="container d-flex justify-content-between align-items-center">
+    <section class="grid__section">
+        <div class="grid-item">
+            <img width="50" height="50" src="https://img.icons8.com/ios/50/bank-building.png" alt="bank-building"/>
+            <div class="app-info">
+                <p>DAM-ISS</p>
+                <p>Imposto sobre serviços bancários</p>
+            </div>
+        </div>
+        <div class="grid-item">
+            <img width="50" height="50" src="https://img.icons8.com/external-smashingstocks-mixed-smashing-stocks/50/external-Tax-budget-smashingstocks-mixed-smashing-stocks-3.png" alt="external-Tax-budget-smashingstocks-mixed-smashing-stocks-3"/>                
+            <div class="app-info">
+                <p>DAM-ISS</p>
+                <p>Imposto sobre serviços retidos</p>
+            </div>
+        </div>
+        <div class="grid-item">
+            <img width="50" height="50" src="https://img.icons8.com/ios/50/document-1.png" alt="document-1"/>
+            <div class="app-info">
+                <p>2ª Via DAM</p>
+                <p>Geração e impressão da segunda via DAM</p>
+            </div>
+        </div>
+        <div class="grid-item">
+            <img width="50" height="50" src="https://img.icons8.com/color/50/nota-fiscal-eletronica.png" alt="nota-fiscal-eletronica"/>
+            <div class="app-info">
+                <p>NFE</p>
+                <p>Nota fiscal de serviço do contribuinte</p>
+            </div>
+        </div>
+        <div class="grid-item">
+            <img width="50" height="50" src="https://img.icons8.com/ios/50/overview-pages-1.png" alt="overview-pages-1"/>
+            <div class="app-info">
+                <p>Certidão</p>
+                <p>Impressão de certidões de débitos</p>
+            </div>
+        </div>
+        <div class="grid-item">
+            <img width="50" height="50" src="https://img.icons8.com/external-vectorslab-glyph-vectorslab/50/external-Law-Document-law-and-justice-vectorslab-glyph-vectorslab.png" alt="external-Law-Document-law-and-justice-vectorslab-glyph-vectorslab"/>
+            <div class="app-info">
+                <p>Alvará</p>
+                <p>Verificação de autenticidade</p>
+            </div>
+        </div>
+        <div class="grid-item">
+            <img width="50" height="50" src="https://img.icons8.com/ios/50/task-planning.png" alt="task-planning"/>
+            <div class="app-info">
+                <p>Agendamento</p>
+                <p>Para atendimento no respectivo orgão</p>
+            </div>
+        </div>
+        <div class="grid-item">
+            <img width="50" height="50" src="https://img.icons8.com/external-smashingstocks-mixed-smashing-stocks/50/external-requirement-agile-development-smashingstocks-mixed-smashing-stocks.png" alt="external-requirement-agile-development-smashingstocks-mixed-smashing-stocks"/>
+            <div class="app-info">
+                <p>Requerimento</p>
+                <p>Para diferentes tipos de serviços</p>
+            </div>
+        </div>
+    </section>
+    <footer class="container row">
         <div>
             <img src="images/icp-logo.jpg" alt="icp-logo" class="footer-logo">
             <img src="images/lgpd-logo.png" alt="lgpd-logo" class="footer-logo">
         </div>
         <p class="footer-text m-0">© Ágape Sistemas e Tecnologias</p>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
