--- a/pg-contribuinte.html
+++ b/pg-contribuinte.html
@@ -45,56 +45,56 @@
             <img width="50" height="50" src="https://img.icons8.com/ios/50/bank-building.png" alt="bank-building"/>
             <div class="app-info">
                 <p>DAM-ISS</p>
-                <p>Imposto sobre serviços bancários</p>
+                <p>Lorem ipsum dolor sit amet</p>
             </div>
         </div>
         <div class="grid-item">
             <img width="50" height="50" src="https://img.icons8.com/external-smashingstocks-mixed-smashing-stocks/50/external-Tax-budget-smashingstocks-mixed-smashing-stocks-3.png" alt="external-Tax-budget-smashingstocks-mixed-smashing-stocks-3"/>                
             <div class="app-info">
                 <p>DAM-ISS</p>
-                <p>Imposto sobre serviços retidos</p>
+                <p>Lorem ipsum dolor sit amet</p>
             </div>
         </div>
         <div class="grid-item">
             <img width="50" height="50" src="https://img.icons8.com/ios/50/document-1.png" alt="document-1"/>
             <div class="app-info">
                 <p>2ª Via DAM</p>
-                <p>Geração e impressão da segunda via DAM</p>
+                <p>Lorem ipsum dolor sit amet</p>
             </div>
         </div>
         <div class="grid-item">
             <img width="50" height="50" src="https://img.icons8.com/color/50/nota-fiscal-eletronica.png" alt="nota-fiscal-eletronica"/>
             <div class="app-info">
                 <p>NFE</p>
-                <p>Nota fiscal de serviço do contribuinte</p>
+                <p>Lorem ipsum dolor sit amet</p>
             </div>
         </div>
         <div class="grid-item">
             <img width="50" height="50" src="https://img.icons8.com/ios/50/overview-pages-1.png" alt="overview-pages-1"/>
             <div class="app-info">
                 <p>Certidão</p>
-                <p>Impressão de certidões de débitos</p>
+                <p>Lorem ipsum dolor sit amet</p>
             </div>
         </div>
         <div class="grid-item">
             <img width="50" height="50" src="https://img.icons8.com/external-vectorslab-glyph-vectorslab/50/external-Law-Document-law-and-justice-vectorslab-glyph-vectorslab.png" alt="external-Law-Document-law-and-justice-vectorslab-glyph-vectorslab"/>
             <div class="app-info">
                 <p>Alvará</p>
-                <p>Verificação de autenticidade</p>
+                <p>Lorem ipsum dolor sit amet</p>
             </div>
         </div>
         <div class="grid-item">
             <img width="50" height="50" src="https://img.icons8.com/ios/50/task-planning.png" alt="task-planning"/>
             <div class="app-info">
                 <p>Agendamento</p>
-                <p>Para atendimento no respectivo orgão</p>
+                <p>Lorem ipsum dolor sit amet</p>
             </div>
         </div>
         <div class="grid-item">
             <img width="50" height="50" src="https://img.icons8.com/external-smashingstocks-mixed-smashing-stocks/50/external-requirement-agile-development-smashingstocks-mixed-smashing-stocks.png" alt="external-requirement-agile-development-smashingstocks-mixed-smashing-stocks"/>
             <div class="app-info">
                 <p>Requerimento</p>
-                <p>Para diferentes tipos de serviços</p>
+                <p>Lorem ipsum dolor sit amet</p>
             </div>
         </div>
     </section>
