--- a/pg-contribuinte.html
+++ b/pg-contribuinte.html
@@ -33,71 +33,71 @@
         <div>
             <div class="search-box">
                 <form>
-                    <input type="search" id="input-busca" placeholder="Pesquisar">
+                    <input type="text" id="input-busca" placeholder="Pesquisar">
                 </form>
                 <i class="bi bi-search"></i>
             </div>
             <p>Nossas aplicações</p>
         </div>
+        <section class="grid__section">
+            <div class="grid-item">
+                <img width="50" height="50" src="https://img.icons8.com/ios/50/bank-building.png" alt="bank-building"/>
+                <div class="app-info">
+                    <p>DAM-ISS</p>
+                    <p>Lorem ipsum dolor sit amet</p>
+                </div>
+            </div>
+            <div class="grid-item">
+                <img width="50" height="50" src="https://img.icons8.com/external-smashingstocks-mixed-smashing-stocks/50/external-Tax-budget-smashingstocks-mixed-smashing-stocks-3.png" alt="external-Tax-budget-smashingstocks-mixed-smashing-stocks-3"/>                
+                <div class="app-info">
+                    <p>DAM-ISS</p>
+                    <p>Lorem ipsum dolor sit amet</p>
+                </div>
+            </div>
+            <div class="grid-item">
+                <img width="50" height="50" src="https://img.icons8.com/ios/50/document-1.png" alt="document-1"/>
+                <div class="app-info">
+                    <p>2ª Via DAM</p>
+                    <p>Lorem ipsum dolor sit amet</p>
+                </div>
+            </div>
+            <div class="grid-item">
+                <img width="50" height="50" src="https://img.icons8.com/color/50/nota-fiscal-eletronica.png" alt="nota-fiscal-eletronica"/>
+                <div class="app-info">
+                    <p>NFE</p>
+                    <p>Lorem ipsum dolor sit amet</p>
+                </div>
+            </div>
+            <div class="grid-item">
+                <img width="50" height="50" src="https://img.icons8.com/ios/50/overview-pages-1.png" alt="overview-pages-1"/>
+                <div class="app-info">
+                    <p>Certidão</p>
+                    <p>Lorem ipsum dolor sit amet</p>
+                </div>
+            </div>
+            <div class="grid-item">
+                <img width="50" height="50" src="https://img.icons8.com/external-vectorslab-glyph-vectorslab/50/external-Law-Document-law-and-justice-vectorslab-glyph-vectorslab.png" alt="external-Law-Document-law-and-justice-vectorslab-glyph-vectorslab"/>
+                <div class="app-info">
+                    <p>Alvará</p>
+                    <p>Lorem ipsum dolor sit amet</p>
+                </div>
+            </div>
+            <div class="grid-item">
+                <img width="50" height="50" src="https://img.icons8.com/ios/50/task-planning.png" alt="task-planning"/>
+                <div class="app-info">
+                    <p>Agendamento</p>
+                    <p>Lorem ipsum dolor sit amet</p>
+                </div>
+            </div>
+            <div class="grid-item">
+                <img width="50" height="50" src="https://img.icons8.com/external-smashingstocks-mixed-smashing-stocks/50/external-requirement-agile-development-smashingstocks-mixed-smashing-stocks.png" alt="external-requirement-agile-development-smashingstocks-mixed-smashing-stocks"/>
+                <div class="app-info">
+                    <p>Requerimento</p>
+                    <p>Lorem ipsum dolor sit amet</p>
+                </div>
+            </div>
+        </section>
     </main>
-    <section class="grid__section">
-        <div class="grid-item">
-            <img width="50" height="50" src="https://img.icons8.com/ios/50/bank-building.png" alt="bank-building"/>
-            <div class="app-info">
-                <p>DAM-ISS</p>
-                <p>Lorem ipsum dolor sit amet</p>
-            </div>
-        </div>
-        <div class="grid-item">
-            <img width="50" height="50" src="https://img.icons8.com/external-smashingstocks-mixed-smashing-stocks/50/external-Tax-budget-smashingstocks-mixed-smashing-stocks-3.png" alt="external-Tax-budget-smashingstocks-mixed-smashing-stocks-3"/>                
-            <div class="app-info">
-                <p>DAM-ISS</p>
-                <p>Lorem ipsum dolor sit amet</p>
-            </div>
-        </div>
-        <div class="grid-item">
-            <img width="50" height="50" src="https://img.icons8.com/ios/50/document-1.png" alt="document-1"/>
-            <div class="app-info">
-                <p>2ª Via DAM</p>
-                <p>Lorem ipsum dolor sit amet</p>
-            </div>
-        </div>
-        <div class="grid-item">
-            <img width="50" height="50" src="https://img.icons8.com/color/50/nota-fiscal-eletronica.png" alt="nota-fiscal-eletronica"/>
-            <div class="app-info">
-                <p>NFE</p>
-                <p>Lorem ipsum dolor sit amet</p>
-            </div>
-        </div>
-        <div class="grid-item">
-            <img width="50" height="50" src="https://img.icons8.com/ios/50/overview-pages-1.png" alt="overview-pages-1"/>
-            <div class="app-info">
-                <p>Certidão</p>
-                <p>Lorem ipsum dolor sit amet</p>
-            </div>
-        </div>
-        <div class="grid-item">
-            <img width="50" height="50" src="https://img.icons8.com/external-vectorslab-glyph-vectorslab/50/external-Law-Document-law-and-justice-vectorslab-glyph-vectorslab.png" alt="external-Law-Document-law-and-justice-vectorslab-glyph-vectorslab"/>
-            <div class="app-info">
-                <p>Alvará</p>
-                <p>Lorem ipsum dolor sit amet</p>
-            </div>
-        </div>
-        <div class="grid-item">
-            <img width="50" height="50" src="https://img.icons8.com/ios/50/task-planning.png" alt="task-planning"/>
-            <div class="app-info">
-                <p>Agendamento</p>
-                <p>Lorem ipsum dolor sit amet</p>
-            </div>
-        </div>
-        <div class="grid-item">
-            <img width="50" height="50" src="https://img.icons8.com/external-smashingstocks-mixed-smashing-stocks/50/external-requirement-agile-development-smashingstocks-mixed-smashing-stocks.png" alt="external-requirement-agile-development-smashingstocks-mixed-smashing-stocks"/>
-            <div class="app-info">
-                <p>Requerimento</p>
-                <p>Lorem ipsum dolor sit amet</p>
-            </div>
-        </div>
-    </section>
     <footer class="container row">
         <div>
             <img src="images/icp-logo.jpg" alt="icp-logo" class="footer-logo">
