--- a/pg-contribuinte.html
+++ b/pg-contribuinte.html
@@ -44,28 +44,28 @@
                 <img width="50" height="50" src="https://img.icons8.com/ios/50/bank-building.png" alt="bank-building"/>
                 <div class="app-info">
                     <p>DAM-ISS</p>
-                    <p>Lorem ipsum dolor sit amet</p>
+                    <p>Imposto sobre serviços bancários</p>
                 </div>
             </div>
             <div class="grid-item">
-                <img width="50" height="50" src="https://img.icons8.com/external-smashingstocks-mixed-smashing-stocks/50/external-Tax-budget-smashingstocks-mixed-smashing-stocks-3.png" alt="external-Tax-budget-smashingstocks-mixed-smashing-stocks-3"/>                
+                <img width="50" height="50" src="https://img.icons8.com/external-becris-lineal-becris/50/external-tax-finance-taxation-becris-lineal-becris.png" alt="external-tax-finance-taxation-becris-lineal-becris"/>                
                 <div class="app-info">
                     <p>DAM-ISS</p>
-                    <p>Lorem ipsum dolor sit amet</p>
+                    <p>Imposto sobre serviços retidos</p>
                 </div>
             </div>
             <div class="grid-item">
-                <img width="50" height="50" src="https://img.icons8.com/ios/50/document-1.png" alt="document-1"/>
+                <img width="50" height="50" src="https://img.icons8.com/ios/50/new-by-copy--v1.png" alt="new-by-copy--v1"/>
                 <div class="app-info">
                     <p>2ª Via DAM</p>
-                    <p>Lorem ipsum dolor sit amet</p>
+                    <p>Geração e impressão da segunda via</p>
                 </div>
             </div>
             <div class="grid-item">
                 <img width="50" height="50" src="https://img.icons8.com/color/50/nota-fiscal-eletronica.png" alt="nota-fiscal-eletronica"/>
                 <div class="app-info">
                     <p>NFE</p>
-                    <p>Lorem ipsum dolor sit amet</p>
+                    <p>Nota fiscal eletrônica por contribuinte</p>
                 </div>
             </div>
             <div class="grid-item">
@@ -76,7 +76,7 @@
                 </div>
             </div>
             <div class="grid-item">
-                <img width="50" height="50" src="https://img.icons8.com/external-vectorslab-glyph-vectorslab/50/external-Law-Document-law-and-justice-vectorslab-glyph-vectorslab.png" alt="external-Law-Document-law-and-justice-vectorslab-glyph-vectorslab"/>
+                <img width="50" height="50" src="https://img.icons8.com/ios/50/document-1.png" alt="document-1"/>
                 <div class="app-info">
                     <p>Alvará</p>
                     <p>Lorem ipsum dolor sit amet</p>
@@ -90,18 +90,25 @@
                 </div>
             </div>
             <div class="grid-item">
-                <img width="50" height="50" src="https://img.icons8.com/external-smashingstocks-mixed-smashing-stocks/50/external-requirement-agile-development-smashingstocks-mixed-smashing-stocks.png" alt="external-requirement-agile-development-smashingstocks-mixed-smashing-stocks"/>
+                <img width="50" height="50" src="https://img.icons8.com/external-outline-geotatah/50/external-requirement-the-global-war-for-talent-outline-geotatah.png" alt="external-requirement-the-global-war-for-talent-outline-geotatah"/>
                 <div class="app-info">
                     <p>Requerimento</p>
                     <p>Lorem ipsum dolor sit amet</p>
+                </div>
+            </div>
+            <div class="grid-item">
+                <img width="50" height="50" src="https://img.icons8.com/ios/50/security-pass.png" alt="security-pass"/>
+                <div class="app-info">
+                    <p>Cartão C.G.A.</p>
+                    <p>Cadastro geral de atividade</p>
                 </div>
             </div>
         </section>
     </main>
     <footer class="container row">
         <div>
-            <img src="images/icp-logo.jpg" alt="icp-logo" class="footer-logo">
             <img src="images/lgpd-logo.png" alt="lgpd-logo" class="footer-logo">
+            <img src="images/icp-logo.jpg" alt="icp-logo" class="footer-logo">
         </div>
         <p class="footer-text m-0">© Ágape Sistemas e Tecnologias</p>
     </footer>
