--- a/pg-contribuinte.html
+++ b/pg-contribuinte.html
@@ -58,14 +58,14 @@
                 <img width="50" height="50" src="https://img.icons8.com/ios/50/new-by-copy--v1.png" alt="new-by-copy--v1"/>
                 <div class="app-info">
                     <p>2ª Via DAM</p>
-                    <p>Geração e impressão da segunda via</p>
+                    <p>Lorem ipsum dolor sit amet</p>
                 </div>
             </div>
             <div class="grid-item">
                 <img width="50" height="50" src="https://img.icons8.com/color/50/nota-fiscal-eletronica.png" alt="nota-fiscal-eletronica"/>
                 <div class="app-info">
                     <p>NFE</p>
-                    <p>Nota fiscal eletrônica por contribuinte</p>
+                    <p>Lorem ipsum dolor sit amet</p>
                 </div>
             </div>
             <div class="grid-item">
