--- a/pg-contribuinte.html
+++ b/pg-contribuinte.html
@@ -11,7 +11,7 @@
 <body>
     <header class="container row">
         <img src="images/logo/Union.png" alt="ag-logo" class="ag-logo">
-        <div class="navbar">
+        <!-- <div class="navbar">
             <button class="nav-toggler">
                 <img src="images/menu.png" alt="menu">
             </button>
@@ -31,7 +31,7 @@
                     </li>
                 </ul>
             </nav>
-        </div>
+        </div> -->
     </header>
     <main class="container">
         <div class="row">
