--- a/pg-contribuinte.html
+++ b/pg-contribuinte.html
@@ -5,151 +5,113 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="shortcut icon" href="images/logo/Icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.css">
     <link rel="stylesheet" href="css/portal.css">
     <title>Portal do Contribuinte</title>
 </head>
 <body>
-    <header class="container row">
+    <header class="container column py-3">
         <img src="images/logo/Union.png" alt="ag-logo" class="ag-logo">
-        <!-- <div class="navbar">
-            <button class="nav-toggler">
-                <img src="images/menu.png" alt="menu">
-            </button>
-            <nav class="nav">
-                <button class="nav-close">
-                    <img src="images/close.png" alt="close">
-                </button>
-                <ul class="nav-list">
-                    <li class="nav-link">
-                        <a href="#">Solicitar acesso</a>
-                    </li>
-                    <li class="nav-link">
-                        <a href="#">Redefinir senha</a>
-                    </li>
-                    <li class="nav-link">
-                        <a href="#">Sair</a>
-                    </li>
-                </ul>
-            </nav>
-        </div> -->
     </header>
     <main class="container">
-        <div class="row">
+        <div class="column pt-3 purple">
             <div class="user-info">
                 <p>Olá, <span class="user-name">José</span>!</p>
                 <p class="user-msg">Bom dia</p>
             </div>
             <div class="group-btn">
-                <button class="btn">
+                <button class="a11y-button">
                     <i class="bi bi-zoom-out"></i>
                 </button>
-                <button class="btn">
+                <button class="a11y-button">
                     <i class="bi bi-circle-half"></i>
                 </button>
-                <button class="btn">
+                <button class="a11y-button">
                     <i class="bi bi-zoom-in"></i>
                 </button>
             </div>
         </div>
-        <div>
+        <div class="yellow py-3">
             <div class="search-box">
                 <form>
                     <input type="text" id="input-busca" placeholder="Pesquisar">
                 </form>
                 <i class="bi bi-search"></i>
             </div>
-            <p>Nossas aplicações</p>
         </div>
-        <section class="grid__section">
-            <div class="grid-item">
+        <h6 class="grid-title">Portal do contribuinte</h6>
+        <section class="grid__section blue">
+            <div class="grid-item col">
                 <img width="50" height="50" src="https://img.icons8.com/ios/50/bank-building.png" alt="bank-building"/>
                 <div class="app-info">
                     <p>DAM-ISS</p>
-                    <p>Imposto sobre serviços bancários</p>
+                    <p class="description">Imposto sobre serviços bancários</p>
                 </div>
             </div>
-            <div class="grid-item">
+            <div class="grid-item col">
                 <img width="50" height="50" src="https://img.icons8.com/external-becris-lineal-becris/50/external-tax-finance-taxation-becris-lineal-becris.png" alt="external-tax-finance-taxation-becris-lineal-becris"/>                
                 <div class="app-info">
                     <p>DAM-ISS</p>
-                    <p>Imposto sobre serviços retidos</p>
+                    <p class="description">Imposto sobre serviços retidos</p>
                 </div>
             </div>
-            <div class="grid-item">
+            <div class="grid-item col">
                 <img width="50" height="50" src="https://img.icons8.com/ios/50/new-by-copy--v1.png" alt="new-by-copy--v1"/>
                 <div class="app-info">
                     <p>2ª Via DAM</p>
-                    <p>Lorem ipsum dolor sit amet</p>
+                    <p class="description">Lorem ipsum dolor sit amet</p>
                 </div>
             </div>
-            <div class="grid-item">
+            <div class="grid-item col">
                 <img width="50" height="50" src="https://img.icons8.com/color/50/nota-fiscal-eletronica.png" alt="nota-fiscal-eletronica"/>
                 <div class="app-info">
                     <p>NFE</p>
-                    <p>Lorem ipsum dolor sit amet</p>
+                    <p class="description">Lorem ipsum dolor sit amet</p>
                 </div>
             </div>
-            <div class="grid-item">
+            <div class="grid-item col">
                 <img width="50" height="50" src="https://img.icons8.com/ios/50/overview-pages-1.png" alt="overview-pages-1"/>
                 <div class="app-info">
                     <p>Certidão</p>
-                    <p>Lorem ipsum dolor sit amet</p>
+                    <p class="description">Lorem ipsum dolor sit amet</p>
                 </div>
             </div>
-            <div class="grid-item">
+            <div class="grid-item col">
                 <img width="50" height="50" src="https://img.icons8.com/ios/50/document-1.png" alt="document-1"/>
                 <div class="app-info">
                     <p>Alvará</p>
-                    <p>Lorem ipsum dolor sit amet</p>
+                    <p class="description">Lorem ipsum dolor sit amet</p>
                 </div>
             </div>
-            <div class="grid-item">
+            <div class="grid-item col">
                 <img width="50" height="50" src="https://img.icons8.com/ios/50/task-planning.png" alt="task-planning"/>
                 <div class="app-info">
                     <p>Agendamento</p>
-                    <p>Lorem ipsum dolor sit amet</p>
+                    <p class="description">Lorem ipsum dolor sit amet</p>
                 </div>
             </div>
-            <div class="grid-item">
+            <div class="grid-item col">
                 <img width="50" height="50" src="https://img.icons8.com/external-outline-geotatah/50/external-requirement-the-global-war-for-talent-outline-geotatah.png" alt="external-requirement-the-global-war-for-talent-outline-geotatah"/>
                 <div class="app-info">
                     <p>Requerimento</p>
-                    <p>Lorem ipsum dolor sit amet</p>
+                    <p class="description">Lorem ipsum dolor sit amet</p>
                 </div>
             </div>
-            <div class="grid-item">
+            <div class="grid-item col">
                 <img width="50" height="50" src="https://img.icons8.com/ios/50/security-pass.png" alt="security-pass"/>
                 <div class="app-info">
                     <p>Cartão C.G.A.</p>
-                    <p>Cadastro geral de atividade</p>
+                    <p class="description">Cadastro geral de atividade</p>
                 </div>
             </div>
         </section>
     </main>
-    <footer class="container row">
+    <footer class="container column align-items-center pt-3">
         <div>
             <img src="images/lgpd-logo.png" alt="lgpd-logo" class="footer-logo">
             <img src="images/icp-logo.jpg" alt="icp-logo" class="footer-logo">
         </div>
         <p class="footer-text m-0">© Ágape Sistemas e Tecnologias</p>
     </footer>
-    <script>
-        const toggleBtn = document.querySelector(".nav-toggler");
-        const closeBtn = document.querySelector(".nav-close")
-        const nav = document.querySelector(".nav");
-
-        toggleBtn.addEventListener("click", ()=>{
-            if(nav.classList.contains("show-nav")){
-                nav.classList.remove("show-nav");
-            }
-            else{
-                nav.classList.add("show-nav");
-            }
-        });
-
-        closeBtn.addEventListener("click", ()=>{
-            nav.classList.remove("show-nav");
-        });
-    </script>
 </body>
 </html>
