--- a/pg-contribuinte.html
+++ b/pg-contribuinte.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="shortcut icon" href="images/logo/Icon.png" type="image/x-icon">
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/portal.css">
     <title>Portal do Contribuinte</title>
 </head>
 <body>
-    <header class="container column py-3">
-        <img src="images/logo/Union.png" alt="ag-logo" class="ag-logo">
+    <header class="column py-3">
+        <div class="container">
+            <img src="images/logo/Union.png" alt="ag-logo" class="ag-logo">
+        </div>
     </header>
     <main class="container">
         <div class="column pt-3 purple">
@@ -31,15 +33,15 @@
                 </button>
             </div>
         </div>
-        <div class="yellow py-3">
+        <div class="d-lg-flex flex-row-reverse justify-content-between align-items-center py-lg-3">
             <div class="search-box">
                 <form>
                     <input type="text" id="input-busca" placeholder="Pesquisar">
                 </form>
                 <i class="bi bi-search"></i>
             </div>
+            <h6 class="grid-title">Portal do contribuinte</h6>
         </div>
-        <h6 class="grid-title">Portal do contribuinte</h6>
         <section class="grid__section blue">
             <div class="grid-item col">
                 <img width="50" height="50" src="https://img.icons8.com/ios/50/bank-building.png" alt="bank-building"/>
@@ -112,6 +114,6 @@
             <img src="images/icp-logo.jpg" alt="icp-logo" class="footer-logo">
         </div>
         <p class="footer-text m-0">© Ágape Sistemas e Tecnologias</p>
-    </footer>
+    </footer>  
 </body>
 </html>
