--- a/pg-contribuinte.html
+++ b/pg-contribuinte.html
@@ -43,69 +43,6 @@
             <h6 class="grid-title">Portal do contribuinte</h6>
         </div>
         <section class="grid__section blue">
-            <div class="grid-item col">
-                <img width="50" height="50" src="https://img.icons8.com/ios/50/bank-building.png" alt="bank-building"/>
-                <div class="app-info">
-                    <p>DAM-ISS</p>
-                    <p class="description">Imposto sobre serviços bancários</p>
-                </div>
-            </div>
-            <div class="grid-item col">
-                <img width="50" height="50" src="https://img.icons8.com/external-becris-lineal-becris/50/external-tax-finance-taxation-becris-lineal-becris.png" alt="external-tax-finance-taxation-becris-lineal-becris"/>                
-                <div class="app-info">
-                    <p>DAM-ISS</p>
-                    <p class="description">Imposto sobre serviços retidos</p>
-                </div>
-            </div>
-            <div class="grid-item col">
-                <img width="50" height="50" src="https://img.icons8.com/ios/50/new-by-copy--v1.png" alt="new-by-copy--v1"/>
-                <div class="app-info">
-                    <p>2ª Via DAM</p>
-                    <p class="description">Lorem ipsum dolor sit amet</p>
-                </div>
-            </div>
-            <div class="grid-item col">
-                <img width="50" height="50" src="https://img.icons8.com/color/50/nota-fiscal-eletronica.png" alt="nota-fiscal-eletronica"/>
-                <div class="app-info">
-                    <p>NFE</p>
-                    <p class="description">Lorem ipsum dolor sit amet</p>
-                </div>
-            </div>
-            <div class="grid-item col">
-                <img width="50" height="50" src="https://img.icons8.com/ios/50/overview-pages-1.png" alt="overview-pages-1"/>
-                <div class="app-info">
-                    <p>Certidão</p>
-                    <p class="description">Lorem ipsum dolor sit amet</p>
-                </div>
-            </div>
-            <div class="grid-item col">
-                <img width="50" height="50" src="https://img.icons8.com/ios/50/document-1.png" alt="document-1"/>
-                <div class="app-info">
-                    <p>Alvará</p>
-                    <p class="description">Lorem ipsum dolor sit amet</p>
-                </div>
-            </div>
-            <div class="grid-item col">
-                <img width="50" height="50" src="https://img.icons8.com/ios/50/task-planning.png" alt="task-planning"/>
-                <div class="app-info">
-                    <p>Agendamento</p>
-                    <p class="description">Lorem ipsum dolor sit amet</p>
-                </div>
-            </div>
-            <div class="grid-item col">
-                <img width="50" height="50" src="https://img.icons8.com/external-outline-geotatah/50/external-requirement-the-global-war-for-talent-outline-geotatah.png" alt="external-requirement-the-global-war-for-talent-outline-geotatah"/>
-                <div class="app-info">
-                    <p>Requerimento</p>
-                    <p class="description">Lorem ipsum dolor sit amet</p>
-                </div>
-            </div>
-            <div class="grid-item col">
-                <img width="50" height="50" src="https://img.icons8.com/ios/50/security-pass.png" alt="security-pass"/>
-                <div class="app-info">
-                    <p>Cartão C.G.A.</p>
-                    <p class="description">Cadastro geral de atividade</p>
-                </div>
-            </div>
         </section>
     </main>
     <footer class="container column align-items-center pt-3">
@@ -114,6 +51,7 @@
             <img src="images/icp-logo.jpg" alt="icp-logo" class="footer-logo">
         </div>
         <p class="footer-text m-0">© Ágape Sistemas e Tecnologias</p>
-    </footer>  
+    </footer>
+    <script src="js/portal.js"></script>
 </body>
 </html>
