--- a/pg-contribuinte.html
+++ b/pg-contribuinte.html
@@ -16,7 +16,7 @@
         </div>
     </header>
     <main class="container">
-        <div class="column pt-3 purple">
+        <div class="column pt-3">
             <div class="user-info">
                 <p>Olá, <span class="user-name">José</span>!</p>
                 <p class="user-msg">Bom dia</p>
@@ -42,7 +42,7 @@
             </div>
             <h6 class="grid-title">Portal do contribuinte</h6>
         </div>
-        <section class="grid__section blue">
+        <section class="grid__section">
         </section>
     </main>
     <footer class="container column align-items-center pt-3">
