--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
                 </div>
                 <div class="section-btn row">
                     <a href="pg-contribuinte.html" class="btn">Entrar</a>
-                    <div class="row certificado">
+                    <a href="pg-certificado.html" class="btn">Login por certificado</a>
+                    <!-- <div class="row certificado">
                         <a href="pg-certificado.html" class="anchor">Clique aqui</a>
                         <p>para entrar com o certificado.</p>
-                    </div>
+                    </div> -->
                 </div>
                 <hr class="d-none">
                 <div class="section-footer">
