--- a/pg-contribuinte.html
+++ b/pg-contribuinte.html
@@ -33,7 +33,7 @@
             </div> -->
         </div>
     </header>
-    <main class="container bg-white">
+    <main class="container">
         <div class="d-flex gap-1 justify-content-end pt-3">
             <button class="a11y-button">
                 <i class="bi bi-zoom-out"></i>
