--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <a href="pg-senha.html" class="anchor">Esqueceu sua senha?</a>
                 </div>
                 <div class="section-btn row">
-                    <a href="pg-contribuinte.html" class="btn">Entrar</a>
+                    <a href="pg-portal.html" class="btn">Entrar</a>
                     <a href="pg-certificado.html" class="btn">Login por certificado</a>
                     <!-- <div class="row certificado">
                         <a href="pg-certificado.html" class="anchor">Clique aqui</a>
