--- a/pg-certificado.html
+++ b/pg-certificado.html
@@ -13,7 +13,7 @@
             <div>
                 <img src="images/logo/Union.png" alt="agape logo">
             </div>
-            <p class="d-none">Bem vindo(a) ao portal do contribuinte</p>
+            <p class="d-none">Bem vindo(a) ao <br>Portal do Contribuinte!</p>
         </section>
         <section class="container section__main">
             <div class="position">
@@ -31,7 +31,7 @@
                     </form>
                 </div>
                 <div class="section-btn row">
-                    <a href="pg-contribuinte.html" class="btn">Entrar</a>
+                    <a href="pg-portal.html" class="btn">Entrar</a>
                     <a href="index.html" class="btn voltar">Voltar</a>
                 </div>
                 <hr class="d-none">
