--- a/ag-certificado.html
+++ b/ag-certificado.html
@@ -11,7 +11,7 @@
     <div class="wrapper column">
         <section class="container section__head column">
             <div>
-                <img src="images/logo/Union.png" alt="agape logo">
+                <img src="images/logo/Union.png" class="ag-logo" alt="agape">
             </div>
             <p class="d-none">Bem vindo(a) ao <br>Portal do Contribuinte!</p>
         </section>
@@ -31,7 +31,7 @@
                     </form>
                 </div>
                 <div class="section-btn row">
-                    <a href="pg-portal.html" class="btn">Entrar</a>
+                    <a href="ag-portal.html" class="btn">Entrar</a>
                     <a href="index.html" class="btn voltar">Voltar</a>
                 </div>
                 <hr class="d-none">
