--- a/ag-senha.html
+++ b/ag-senha.html
@@ -11,7 +11,7 @@
     <div class="wrapper column">
         <section class="container section__head column">
             <div>
-                <img src="images/logo/Union.png" alt="agape logo">
+                <img src="images/logo/Union.png" class="ag-logo" alt="agape">
             </div>
             <p class="d-none">Bem vindo(a) ao portal do contribuinte</p>
         </section>
