--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper column">
         <section class="container section__head column">
             <div>
-                <img src="images/logo/Union.png" alt="agape logo">
+                <img src="images/logo/Union.png" alt="agape" class="ag-logo">
             </div>
             <p class="d-none">Bem vindo(a) ao <br>Portal do Contribuinte!</p>
         </section>
@@ -33,11 +33,11 @@
                         <input type="checkbox" id="input-checkbox">
                         <label for="input-checkbox">Lembrar-me</label>
                     </form>
-                    <a href="pg-senha.html" class="anchor">Esqueceu sua senha?</a>
+                    <a href="ag-senha.html" class="anchor">Esqueceu sua senha?</a>
                 </div>
                 <div class="section-btn row">
-                    <a href="pg-portal.html" class="btn">Entrar</a>
-                    <a href="pg-certificado.html" class="btn">Login por certificado</a>
+                    <a href="ag-portal.html" class="btn">Entrar</a>
+                    <a href="ag-certificado.html" class="btn">Login por certificado</a>
                     <!-- <div class="row certificado">
                         <a href="pg-certificado.html" class="anchor">Clique aqui</a>
                         <p>para entrar com o certificado.</p>
