--- a/ag-senha.html
+++ b/ag-senha.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="section-btn row">
                     <a href="#" class="btn">Redefinir senha</a>
-                    <a href="index.html" class="btn voltar">Voltar</a>
+                    <a href="ag-login.html" class="btn voltar">Voltar</a>
                 </div>
                 <hr class="d-none">
                 <div class="section-footer">
