--- a/index.html
+++ b/index.html
@@ -2,58 +2,87 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/logo/Icon.png" type="image/x-icon">
-    <title>Portal Ágape</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="css/portal.css">
+    <title>Portal do Contribuinte</title>
 </head>
 <body>
-    <div class="wrapper column">
-        <section class="container section__head column">
+    <header class="py-3">
+        <div class="container column align-items-center">
+            <img src="images/logo/Union.png" class="ag-logo" alt="agape">
             <div>
-                <img src="images/logo/Union.png" alt="agape" class="ag-logo">
+                <button class="a11y-button">
+                    <i class="bi bi-zoom-out"></i>
+                </button>
+                <button class="a11y-button">
+                    <i class="bi bi-circle-half"></i>
+                </button>
+                <button class="a11y-button">
+                    <i class="bi bi-zoom-in"></i>
+                </button>
             </div>
-            <p class="d-none">Bem vindo(a) ao <br>Portal do Contribuinte!</p>
-        </section>
-        <section class="container section__main">
-            <div class="position">
-                <h2 class="forms-title">Acesse o nosso portal</h2>
-                <div class="forms-main">
-                    <form>
-                        <label for="input-cpf">CPF/CNPJ:</label>
-                        <input type="text" id="input-cpf" placeholder="Digite aqui o seu CPF ou CNPJ">
-                    </form>
-                    <form>
-                        <label for="input-senha">Senha:</label>
-                        <input type="password" id="input-senha" placeholder="Digite aqui a sua senha">
-                    </form>
-                </div>
-                <div class="forms-footer row">
-                    <form>
-                        <input type="checkbox" id="input-checkbox">
-                        <label for="input-checkbox">Lembrar-me</label>
-                    </form>
-                    <a href="ag-senha.html" class="anchor">Esqueceu sua senha?</a>
-                </div>
-                <div class="section-btn row">
-                    <a href="ag-portal.html" class="btn">Entrar</a>
-                    <a href="ag-certificado.html" class="btn">Login por certificado</a>
-                    <!-- <div class="row certificado">
-                        <a href="pg-certificado.html" class="anchor">Clique aqui</a>
-                        <p>para entrar com o certificado.</p>
-                    </div> -->
-                </div>
-                <hr class="d-none">
-                <div class="section-footer">
-                    <div class="d-none">
-                        <img src="images/icp-logo.jpg" alt="icp-logo" class="footer-logo">
-                        <img src="images/lgpd-logo.png" alt="lgpd-logo" class="footer-logo">
-                    </div>
-                    <p>© Ágape Sistemas e Tecnologias</p>
-                </div>
+        </div>
+    </header>
+    <main class="container">
+        <div class="d-lg-flex flex-row-reverse justify-content-between align-items-center py-lg-3">
+            <div class="search-box">
+                <form>
+                    <input type="text" id="input-busca" placeholder="Pesquisar">
+                </form>
+                <i class="bi bi-search"></i>
             </div>
+            <h6 class="grid-title">Portal do contribuinte</h6>
+        </div>
+        <section class="grid__section">
         </section>
+    </main>
+    <footer class="container column align-items-center pt-3">
+        <div>
+            <img src="images/lgpd-logo.png" alt="lgpd-logo" class="footer-logo">
+            <img src="images/icp-logo.jpg" alt="icp-logo" class="footer-logo">
+        </div>
+        <p class="footer-text m-0">© Ágape Sistemas e Tecnologias</p>
+    </footer>
+    <!-- MODAL -->
+    <div class="a11y-modal">
+        <button class="btn btn-info" data-bs-toggle="modal" data-bs-target=".modal">
+            <i class="bi bi-universal-access-circle text-white"></i>
+        </button>
     </div>
-    <script src="app.js"></script>
+    <div class="modal fade" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">O que são esses botões?</h4>
+                    <button class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="pt-1">
+                        <button class="a11y-button">
+                            <i class="bi bi-zoom-out"></i>
+                        </button>
+                        <span>Lorem ipsum dolor sit amet</span>
+                    </div>
+                    <div class="pt-1">
+                        <button class="a11y-button">
+                            <i class="bi bi-zoom-in"></i>
+                        </button>
+                        <span>Lorem ipsum dolor sit amet</span>
+                    </div>
+                    <div class="pt-1">
+                        <button class="a11y-button">
+                            <i class="bi bi-circle-half"></i>
+                        </button>
+                        <span>Lorem ipsum dolor sit amet</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> 
+    <script src="js/portal.js"></script>
+    <script src="bootstrap-5.3.3-dist/js/bootstrap.js"></script>
 </body>
 </html>
