--- a/ag-login.html
+++ b/ag-login.html
@@ -15,7 +15,7 @@
             </div>
             <div>
                 <p class="d-none">Bem vindo(a) ao <br>Portal do Contribuinte!</p>
-                <a href="index.html">Voltar</a>
+                <a href="index.html" class="d-none">Voltar</a>
             </div>
         </section>
         <section class="container section__main">
