--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
     </header>
     <main class="container">
-        <div class="pt-3 d-flex justify-content-between align-items-center">
+        <div class="pt-3 d-flex justify-content-between ali">
             <div class="gov-logo--container">
                 <img src="images/gov-logo.png" alt="gov logo" class="gov-logo">
             </div>
@@ -45,11 +45,11 @@
         </section>
     </main>
     <footer class="container column align-items-center pt-3">
-        <div>
+        <div class="w-50">
             <img src="images/lgpd-logo.png" alt="lgpd-logo" class="footer-logo">
             <img src="images/icp-logo.jpg" alt="icp-logo" class="footer-logo">
         </div>
-        <p class="footer-text m-0">© Ágape Sistemas e Tecnologias</p>
+        <p class="footer-text">Ágape © Copyright 2024</p>
     </footer>
     <!-- MODAL -->
     <div class="a11y-modal">
