--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             height: 100dvh;
         }
 
+        body{
+            background-color: #2765D9;
+        }
+
         .ag-logo{
             position: absolute;
             top: 50%;
