--- a/ag-login.html
+++ b/ag-login.html
@@ -42,7 +42,7 @@
                     <a href="ag-dam.html" class="btn">Entrar</a>
                     <a href="ag-contribuinte.html" class="btn voltar">Voltar</a>
                     <div class="row certificado">
-                        <a href="pg-certificado.html" class="anchor">Clique aqui</a>
+                        <a href="ag-certificado.html" class="anchor">Clique aqui</a>
                         <p>para entrar com o certificado.</p>
                     </div>
                 </div>
