--- a/ag-certificado.html
+++ b/ag-certificado.html
@@ -23,8 +23,8 @@
                 <h2 class="forms-title">Acesse o nosso portal</h2>
                 <div class="forms-main">
                     <form>
-                        <label for="input-cpf">Certificado:</label>
-                        <input type="text" id="input-cpf" placeholder="Digite aqui o seu certificado">
+                        <label for="input-certificado">Certificado:</label>
+                        <input type="text" id="input-certificado" placeholder="Digite aqui o seu certificado">
                     </form>
                 </div>
                 <div class="forms-footer row">
