--- a/ag-dam.html
+++ b/ag-dam.html
@@ -44,7 +44,7 @@
         </div>
         <div class="column flex-wrap align-items-start gap-2">
             <h6 class="grid-title">2ª Via do Documento de Arrecadação Municipal</h6>
-            <button class="filter-btn d-flex align-items-center gap-1">
+            <button class="filter-btn column align-items-center gap-1">
                 <i class="bi bi-funnel"></i>
                 <p>Filtros</p>
             </button>
@@ -55,7 +55,11 @@
                 <option>3</option>
             </select>
         </div>
-        <section></section>
+        <section class="tributos__section mt-3 mb-2"></section>
+        <div class="column tributos-footer">
+            <p>Total de <span class="border px-1">50</span> registros</p>
+            <p>Página <span class="border px-1">1</span> de <span class="border px-1">5</span></p>
+        </div>
     </main>
     <footer class="container column align-items-center pt-3">
         <div class="w-50">
@@ -64,17 +68,6 @@
         </div>
         <p class="footer-text">Ágape © Copyright 2024</p>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script>
-        $(function () {
-            $('[data-toggle="tooltip"]').tooltip()
-        })
-
-        $(function () {
-            $('[data-toggle="popover"]').popover()
-        })
-    </script>
     <script src="bootstrap-5.3.3-dist/js/bootstrap.js"></script>
-
 </body>
 </html>
