--- a/ag-login.html
+++ b/ag-login.html
@@ -13,7 +13,15 @@
             <div>
                 <img src="images/logo/Union.png" alt="agape" class="ag-logo">
             </div>
-            <p class="d-none">Bem vindo(a) ao <br>Portal do Contribuinte!</p>            
+            <div class="zzz">
+                <p class="d-none">Bem vindo(a) ao <br>Portal do Contribuinte!</p>
+                <a href="ag-contribuinte.html">
+                    <span class="return-btn">
+                        <img src="images/icons8-voltar-24.png" alt="retornar" class="return-img">
+                        <p class="d-none">Voltar para o site</p>
+                    </span>
+                </a>
+            </div>        
         </section>
         <section class="container section__main">
             <div class="position">
@@ -24,11 +32,11 @@
                 <div class="forms-main">
                     <form>
                         <label for="input-cpf">CPF/CNPJ:</label>
-                        <input type="text" id="input-cpf" placeholder="Digite aqui o seu CPF ou CNPJ">
+                        <input type="text" id="input-cpf" placeholder="Clique aqui e digite seu CPF ou CNPJ">
                     </form>
                     <form>
                         <label for="input-senha">Senha:</label>
-                        <input type="password" id="input-senha" placeholder="Digite aqui a sua senha">
+                        <input type="password" id="input-senha" placeholder="Clique aqui e digite sua senha">
                     </form>
                 </div>
                 <div class="forms-footer row">
@@ -40,11 +48,7 @@
                 </div>
                 <div class="section-btn row">
                     <a href="ag-dam.html" class="btn">Entrar</a>
-                    <a href="ag-contribuinte.html" class="btn voltar">Voltar</a>
-                    <div class="row certificado">
-                        <a href="ag-certificado.html" class="anchor">Clique aqui</a>
-                        <p>para entrar com o certificado.</p>
-                    </div>
+                    <a href="ag-certificado.html" class="btn">Login por certificado</a>
                 </div>
                 <hr class="d-none">
                 <div class="section-footer">
