--- a/ag-login.html
+++ b/ag-login.html
@@ -18,7 +18,7 @@
                 <a href="ag-contribuinte.html">
                     <span class="return-btn">
                         <img src="images/icons8-voltar-24.png" alt="retornar" class="return-img">
-                        <p class="d-none">Voltar para o site</p>
+                        <p class="d-none" style="font-size: 1rem;">Voltar para o site</p>
                     </span>
                 </a>
             </div>        
